--- a/pom.xml
+++ b/pom.xml
@@ -1,105 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example.gwtp</groupId>
-    <artifactId>gwtp-example</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+	<groupId>com.example.gwtp</groupId>
+	<artifactId>gwtp-example</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 
-    <packaging>war</packaging>
-    <name>GWTP Basic</name>
+	<packaging>war</packaging>
+	<name>GWTP Basic</name>
 
-    <properties>
-        <!-- client -->
-        <gwt.version>2.8.1</gwt.version>
-        <gwtp.version>1.6</gwtp.version>
-        <gin.version>2.1.2</gin.version>
-        <gwt.style>OBF</gwt.style>
+	<properties>
+		<!-- client -->
+		<gwt.version>2.8.1</gwt.version>
+		<gwtp.version>1.6</gwtp.version>
+		<gin.version>2.1.2</gin.version>
+		<gwt.jackson.version>0.14.2</gwt.jackson.version>
+		<gwt.dispatch.rest.version>1.6</gwt.dispatch.rest.version>
+		<gwt.style>OBF</gwt.style>
 
-        <!-- maven -->
-        <maven-war-plugin.version>3.1.0</maven-war-plugin.version>
-        <maven-compiler-plugin.version>3.6.2</maven-compiler-plugin.version>
+		<!-- maven -->
+		<maven-war-plugin.version>3.1.0</maven-war-plugin.version>
+		<maven-compiler-plugin.version>3.6.2</maven-compiler-plugin.version>
 
-        <target.jdk>1.8</target.jdk>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<target.jdk>1.8</target.jdk>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <webappDirectory>src/main/webapp</webappDirectory>
-    </properties>
+		<webappDirectory>src/main/webapp</webappDirectory>
+	</properties>
 
-    <build>
-        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
+	<build>
+		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
 
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <source>${target.jdk}</source>
-                    <target>${target.jdk}</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>${target.jdk}</source>
+					<target>${target.jdk}</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 
-            <!-- GWT -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>gwt-maven-plugin</artifactId>
-                <version>${gwt.version}</version>
-                <configuration>
-                    <strict>true</strict>
+			<!-- GWT -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>gwt-maven-plugin</artifactId>
+				<version>${gwt.version}</version>
+				<configuration>
+					<strict>true</strict>
 
-                    <testTimeOut>180</testTimeOut>
-                    <mode>htmlunit</mode>
-                    <includes>**/*GwtTest.java</includes>
+					<testTimeOut>180</testTimeOut>
+					<mode>htmlunit</mode>
+					<includes>**/*GwtTest.java</includes>
 
-                    <logLevel>INFO</logLevel>
+					<logLevel>INFO</logLevel>
 
-                    <runTarget>index.html</runTarget>
-                    <module>com.example.gwtpexample.gwtpexample</module>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+					<runTarget>index.html</runTarget>
+					<module>com.example.gwtpexample.gwtpexample</module>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-    <dependencies>
-        <!-- GWT -->
-        <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-user</artifactId>
-            <version>${gwt.version}</version>
-            <scope>provided</scope>
-        </dependency>
+	<dependencies>
+		<!-- GWT -->
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-user</artifactId>
+			<version>${gwt.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
-        <!-- GWTP -->
-        <dependency>
-            <groupId>com.gwtplatform</groupId>
-            <artifactId>gwtp-mvp-client</artifactId>
-            <version>${gwtp.version}</version>
-            <scope>provided</scope>
-        </dependency>
+		<!-- GWT Jackson -->
+		<dependency>
+			<groupId>com.github.nmorel.gwtjackson</groupId>
+			<artifactId>gwt-jackson</artifactId>
+			<version>${gwt.jackson.version}</version>
+		</dependency>
 
-        <!-- DI -->
-        <dependency>
-            <groupId>com.google.gwt.inject</groupId>
-            <artifactId>gin</artifactId>
-            <version>${gin.version}</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+		<!-- GWTP -->
+		<dependency>
+			<groupId>com.gwtplatform</groupId>
+			<artifactId>gwtp-mvp-client</artifactId>
+			<version>${gwtp.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- GWTP Dispatch Rest -->
+		<dependency>
+			<groupId>com.gwtplatform</groupId>
+			<artifactId>gwtp-dispatch-rest</artifactId>
+			<version>${gwt.dispatch.rest.version}</version>
+		</dependency>
+
+		<!-- GWTP Dispatch Rest Shared -->
+		<dependency>
+			<groupId>com.gwtplatform</groupId>
+			<artifactId>gwtp-dispatch-rest-shared</artifactId>
+			<version>${gwt.dispatch.rest.version}</version>
+		</dependency>
+
+		<!-- GWTP Resource Delegates -->
+		<dependency>
+			<groupId>com.gwtplatform.extensions</groupId>
+			<artifactId>dispatch-rest-delegates</artifactId>
+			<version>${gwtp.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- DI -->
+		<dependency>
+			<groupId>com.google.gwt.inject</groupId>
+			<artifactId>gin</artifactId>
+			<version>${gin.version}</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
