--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-dev</artifactId>
+			<version>${gwt.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- GWT Jackson -->
 		<dependency>
 			<groupId>com.github.nmorel.gwtjackson</groupId>
